tests/ui/half-open-range-patterns/range_pat_interactions1.stderr
error: expected a pattern range bound, found an expression
  --> $DIR/range_pat_interactions1.rs:17:16
   |
LL |             0..5+1 => errors_only.push(x),
   |                ^^^ not a pattern
   |
   = note: arbitrary expressions are not allowed in patterns: <https://doc.rust-lang.org/book/ch18-00-patterns.html>
help: consider extracting the expression into a `const`
   |
LL +         const VAL: /* Type */ = 5+1;
LL ~         match x as i32 {
LL ~             0..VAL => errors_only.push(x),
   |
help: consider wrapping the expression in an inline `const` (requires `#![feature(inline_const_pat)]`)
   |
LL |             0..const { 5+1 } => errors_only.push(x),
   |                +++++++     +

error[E0408]: variable `n` is not bound in all patterns
  --> $DIR/range_pat_interactions1.rs:10:25
   |
LL |         if let n @ 2..3|4 = x {
   |                -        ^ pattern doesn't bind `n`
   |                |
   |                variable not in all patterns

error[E0658]: inline-const in pattern position is experimental
  --> $DIR/range_pat_interactions1.rs:21:20
   |
LL |             y @ 0..const { 5 + 1 } => assert_eq!(y, 5),
   |                    ^^^^^
   |
   = note: see issue #76001 <https://github.com/rust-lang/rust/issues/76001> for more information
   = help: add `#![feature(inline_const_pat)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0408, E0658.
For more information about an error, try `rustc --explain E0408`.
